<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AlarmixActivity!</string>
    <string name="strAppName">Alarmix</string>
    <string name="strViewAlarms">View Alarms</string>
    <string name="strPickSongs">Pick Songs</string>
    <string name="strAll">All</string>
    <string name="strDone">Done</string>
    <string name="strMon">M</string>
    <string name="strTue">Tu</string>
    <string name="strThu">Th</string>
    <string name="strFri">F</string>
    <string name="strSat">Sa</string>
    <string name="strSun">Su</string>
    <string name="strWed">W</string>
    <string name="strTimeEx">12:59</string>
    <string name="strCommentEx">comment placeholder</string>
    <string name="strNew">New</string>
    <string name="strNewAlarm">Set A New Alarm</string>
    <string name="strAlarmName">Alarm Name:</string>
    <string name="strNameHint">Name your alarm</string>
    <string name="strSchedule">Schedule:</string>
    <string name="strCancel">Cancel</string>
    <string name="strCreate">Create</string>
    <string name="strEditAlarm">Edit Alarm</string>
    <string name="strDelete">Delete</string>
    <string name="strSave">Save</string>
    <string name="strWakeUp">Wake Up!</string>
    <string name="strSnooze">Snooze</string>
    <string name="strDismiss">Dismiss</string>

</resources>