<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvEditAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEditAlarm"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
        <Button
	        android:id="@+id/butDelete"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/strDelete" />
        
        <Button
            android:id="@+id/butSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strSave" />
	
    </LinearLayout>

    <TimePicker
        android:id="@+id/tpEditTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAlarmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAlarmName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fldEditAlarmName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:maxLength="16"
        android:hint="@string/strNameHint" >
    </EditText>
    
    <TextView
        android:id="@+id/tvSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSchedule"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
	    <ToggleButton
	        android:id="@+id/togEditMon"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strMon"
	        android:textOff="@string/strMon" />
	    
	    <ToggleButton
	        android:id="@+id/togEditTue"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strTue"
	        android:textOff="@string/strTue" />
	    
	    <ToggleButton
	        android:id="@+id/togEditWed"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strWed"
	        android:textOff="@string/strWed" />
	    
	    <ToggleButton
	        android:id="@+id/togEditThu"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strThu"
	        android:textOff="@string/strThu" />
	    
	    <ToggleButton
	        android:id="@+id/togEditFri"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strFri"
	        android:textOff="@string/strFri" />
	    
	    <ToggleButton
	        android:id="@+id/togEditSat"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strSat"
	        android:textOff="@string/strSat" />
	    
	    <ToggleButton
	        android:id="@+id/togEditSun"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textOn="@string/strSun"
	        android:textOff="@string/strSun" />
    
    </LinearLayout>

</LinearLayout>