<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:paddingTop="5dip"
    android:paddingBottom="5dip" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >
	    <TextView
	        android:id="@+id/tvTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strTimeEx"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_marginLeft="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
            <TextView
		        android:id="@+id/tvMon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strMon" />
		
		    <TextView
		        android:id="@+id/tvTue"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strTue" />
		
		    <TextView
		        android:id="@+id/tvWed"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strWed" />
		
		    <TextView
		        android:id="@+id/tvThu"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strThu" />
		
		    <TextView
		        android:id="@+id/tvFri"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strFri" />
		
		    <TextView
		        android:id="@+id/tvSat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strSat" />
		
		    <TextView
		        android:id="@+id/tvSun"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strSun" />
	        
        </LinearLayout>
        
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <TextView
		        android:id="@+id/tvComment"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strCommentEx" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>