<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mediaView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/mediaListTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPickSongs"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dip" />

    <LinearLayout
        android:id="@+id/mediaListHeaderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <CheckBox
	        android:id="@+id/chkAll"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/strAll" />
	
	    <Button
	        android:id="@+id/butDone"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/strDone" />

    </LinearLayout>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="2dp"
	    android:layout_marginBottom="2dp"
	    android:background="@android:color/darker_gray"/>

    <ListView
        android:id="@+id/mediaListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>