<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/tvWakeUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strWakeUp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="horizontal" >
	    <TextView 
	            android:id="@+id/tvMarqueeTitle"
	            android:singleLine="true"
	            android:text=""
	            android:ellipsize="marquee"
	            android:marqueeRepeatLimit="marquee_forever"
	            android:textColor="#ffffff"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
    	android:gravity="center"
	    android:orientation="horizontal" >
	    
        <Button
            android:id="@+id/butSnooze"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strSnooze" />
        
        <Button
            android:id="@+id/butDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strDismiss" />
	    
    </LinearLayout>

</LinearLayout>